--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# Created by https://www.gitignore.io/api/windows,eclipse,java-web
+# Created by https://www.gitignore.io/api/java,windows,eclipse,java-web
+# Edit at https://www.gitignore.io/?templates=java,windows,eclipse,java-web
 
 ### Eclipse ###
 
@@ -9,9 +10,7 @@ tmp/
 *.bak
 *.swp
 *~.nib
-*.properties
 local.properties
-database.properties
 .settings/
 .loadpath
 .recommenders
@@ -72,6 +71,31 @@ database.properties
 
 .sts4-cache/
 
+### Java ###
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
 ### Java-Web ###
 ## ignoring target file
 target/
@@ -101,5 +125,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-
-# End of https://www.gitignore.io/api/windows,eclipse,java-web
+# End of https://www.gitignore.io/api/java,windows,eclipse,java-web
