--- a/guemgo_project/pom.xml
+++ b/guemgo_project/pom.xml
@@ -25,6 +25,35 @@
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<!--/////// tiles ///////-->
+	 <dependency>
+	    <groupId>org.apache.tiles</groupId>
+	    <artifactId>tiles-extras</artifactId>
+	    <version>3.0.8</version>
+	  </dependency>
+  
+	    <dependency>
+	    <groupId>org.apache.tiles</groupId>
+	    <artifactId>tiles-servlet</artifactId>
+	    <version>3.0.8</version>
+	  </dependency>
+	  
+	    <dependency>
+	    <groupId>org.apache.tiles</groupId>
+	    <artifactId>tiles-jsp</artifactId>
+	    <version>3.0.8</version>
+	  </dependency>
+		<!-- javax.mail -->
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4.7</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-context-support</artifactId>
+		    <version>4.3.5.RELEASE</version>
+		</dependency>
 		<!-- Commons-dbcp -->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
